--- a/package.json
+++ b/package.json
@@ -28,6 +28,14 @@
     "angular": "^1.6.3"
   },
   "devDependencies": {
-    "angular-mocks": "^1.6.3"
+    "angular-mocks": "^1.6.3",
+    "chai": "^3.5.0",
+    "grunt": "^1.0.1",
+    "grunt-karma": "^2.0.0",
+    "karma": "^1.5.0",
+    "karma-chai": "^0.1.0",
+    "karma-chrome-launcher": "^2.0.0",
+    "karma-mocha": "^1.3.0",
+    "mocha": "^3.2.0"
   }
 }
